--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.8.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
