--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
 
     "routes": [
         {
-            "src": "(.*)",
-            "dest": "blogapp/app.js"
+            "src": "/(.*)",
+            "destination": "/app.js"
         }
     ]
 }
