--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
 
     "routes": [
         {
-            "src": "/(.*)",
-            "destination": "blogapp/app.js"
+            "src": "(.*)",
+            "dest": "blogapp/app.js"
         }
     ]
 }
