--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "vercel-build": "npm models deploy"
+    "vercel-build": "npx models deploy"
   },
   "keywords": [],
   "author": "",
