--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,17 @@
-{
-    "version": 2,
-    "rewrites": [
-        {
-            "sources": "/(.*)",
-            "destination": "/app.js"
-        }
-    ]
-}
+
+    {
+        "version": 2,
+        "builds": [
+            {
+                "src": "blogapp/app.js",
+                "use": "@vercel/node"
+            }
+        ],
+    
+        "routes": [
+            {
+                "src": "(.*)",
+                "dest": "blogapp/app.js"
+            }
+        ]
+    }
