--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "vercel-build": "npx models deploy"
+    "start": "node app.js"
+    
   },
   "keywords": [],
   "author": "",
