--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,11 @@
         "builds": [
             {
                 "src": "app.js",
-                "use": "@vercel/node"
+                "use": "@vercel/node",
+                "config": {
+                    "maxDuration": 15
+                  }
+                
             }
         ],
     
